Return url with snapshot on getBlobUrl()